[Bug #164927648] Remove extra white space
Remove extra white space

--- a/UI/assets/css/pagestyle.css
+++ b/UI/assets/css/pagestyle.css
@@ -16,7 +16,7 @@
   --bodyFontFamilyFallback: sans-serif;
   --limeColor: lime;
 }
-.body{
+body{
   overflow-x: hidden;
 }
 html, body{
